--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -12,7 +12,7 @@
 .show-page {
   background-image: url("https://res.cloudinary.com/dzjxqunz7/image/upload/v1598529063/silhouette_dgra62.jpg");
   background-size: cover;
-  position-position: center;
+  background-position: center;
 
 // 'Change Day' Dropdown Styling - Fri/Sat/Sun
   .dropdown-menu.show {
